--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,6 +11,10 @@ on:
       - '.github/workflows/build-deploy.yml'
   workflow_dispatch:
 
+permissions:
+  contents: write
+  packages: write
+
 env:
   DOCKERHUB_USERNAME: appukuttan
   IMAGE_NAME: mastersong
@@ -28,6 +32,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.MUSICAPP_GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
