chore: update build-deploy workflow for improved DockerHub integration

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MUSICAPP_GITHUB_TOKEN }}
 
       - name: Update deployment image tag
         run: |
