--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,19 +1,33 @@
-name: Build and Deploy Music Dashboard
+name: Multi-Stage CI/CD Pipeline
 
 on:
   push:
     branches:
+      - dev
       - main
-      - master
     paths:
       - 'app/**'
       - 'Dockerfile'
       - '.github/workflows/build-deploy.yml'
+  pull_request:
+    branches:
+      - dev
+      - main
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'dev'
+        type: choice
+        options:
+          - dev
+          - qa
 
 permissions:
   contents: write
   packages: write
+  pull-requests: write
 
 env:
   DOCKERHUB_USERNAME: appukuttan
@@ -21,11 +35,16 @@ env:
   REGISTRY: docker.io
 
 jobs:
-  build-and-push:
-    name: Build Docker Image and Push to DockerHub
+  # ============================================
+  # Build and Test Stage
+  # ============================================
+  build-and-test:
+    name: Build, Test & Push Docker Image
     runs-on: ubuntu-latest
     outputs:
       new_tag: ${{ steps.increment_tag.outputs.new_tag }}
+      short_sha: ${{ steps.vars.outputs.short_sha }}
+      branch_name: ${{ steps.vars.outputs.branch_name }}
     
     steps:
       - name: Checkout code
@@ -33,6 +52,12 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.MUSICAPP_GITHUB_TOKEN }}
+
+      - name: Set build variables
+        id: vars
+        run: |
+          echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -67,6 +92,14 @@ jobs:
           echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
 
+      - name: Set PR number
+        id: pr
+        run: |
+          PR_NUMBER=$(echo $GITHUB_REF | sed -n 's/refs\/pull\/\([0-9]*\)\/merge/\1/p')
+          if [ ! -z "$PR_NUMBER" ]; then
+            echo "number=$PR_NUMBER" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -75,21 +108,30 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.increment_tag.outputs.new_tag }}
-            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.event_name == 'pull_request' && format('pr-{0}', steps.pr.outputs.number) || format('{0}-{1}', steps.vars.outputs.branch_name, steps.vars.outputs.short_sha) }}
+            ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.event_name == 'pull_request' && format('pr-{0}-latest', steps.pr.outputs.number) || format('{0}-latest', steps.vars.outputs.branch_name) }}
           cache-from: type=registry,ref=${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:buildcache
           cache-to: type=registry,ref=${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
 
       - name: Create and push Git tag
+        if: github.ref == 'refs/heads/main'
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag -a ${{ steps.increment_tag.outputs.new_tag }} -m "Release ${{ steps.increment_tag.outputs.new_tag }}"
           git push origin ${{ steps.increment_tag.outputs.new_tag }}
 
-  update-k8s-manifest:
-    name: Update Kubernetes Deployment
+  # ============================================
+  # Deploy to DEV Environment
+  # ============================================
+  deploy-dev:
+    name: Deploy to DEV
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: build-and-test
+    if: github.ref == 'refs/heads/dev' || github.event.inputs.environment == 'dev'
+    environment:
+      name: dev
+      url: https://dev.yourdomain.com
     
     steps:
       - name: Checkout code
@@ -97,40 +139,120 @@ jobs:
         with:
           token: ${{ secrets.MUSICAPP_GITHUB_TOKEN }}
 
-      - name: Update deployment image tag
+      - name: Update DEV deployment manifest
         run: |
-          NEW_TAG="${{ needs.build-and-push.outputs.new_tag }}"
+          NEW_TAG="${{ needs.build-and-test.outputs.new_tag }}"
           
-          # Update the image tag in deployment.yaml
-          sed -i "s|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:.*|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${NEW_TAG}|g" k8s/deployment.yaml
+          # Update the image tag in dev overlay
+          if [ -f "k8s/overlays/dev/deployment.yaml" ]; then
+            sed -i "s|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:.*|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${NEW_TAG}|g" k8s/overlays/dev/deployment.yaml
+          else
+            # Update base deployment if overlay doesn't exist
+            sed -i "s|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:.*|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${NEW_TAG}|g" k8s/deployment.yaml
+          fi
           
-          echo "Updated deployment.yaml with image tag: ${NEW_TAG}"
-          
-          # Show the changes
-          cat k8s/deployment.yaml | grep -A 2 "image:"
+          echo "✅ Updated DEV deployment with image tag: ${NEW_TAG}"
 
-      - name: Commit and push changes
+      - name: Commit and push DEV changes
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          git add k8s/deployment.yaml
+          git add k8s/
           
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "🚀 Update deployment image to ${{ needs.build-and-push.outputs.new_tag }}"
+            git commit -m "🚀 [DEV] Update deployment to ${{ needs.build-and-test.outputs.new_tag }}"
             git push origin HEAD:${{ github.ref_name }}
-            echo "✅ Deployment manifest updated successfully!"
+            echo "✅ DEV manifest updated successfully!"
           fi
 
-      - name: Summary
+      - name: DEV Deployment Summary
         run: |
-          echo "## 🎉 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## 🟢 DEV Deployment Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **New Docker Image:** \`${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-push.outputs.new_tag }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "- **DockerHub Link:** https://hub.docker.com/r/${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Deployment Updated:** \`k8s/deployment.yaml\`" >> $GITHUB_STEP_SUMMARY
-          echo "- **Git Tag Created:** \`${{ needs.build-and-push.outputs.new_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Environment:** DEV" >> $GITHUB_STEP_SUMMARY
+          echo "- **Docker Image:** \`${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-test.outputs.new_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Commit SHA:** \`${{ needs.build-and-test.outputs.short_sha }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Branch:** \`${{ needs.build-and-test.outputs.branch_name }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "ArgoCD will automatically sync the new image! 🔄" >> $GITHUB_STEP_SUMMARY
+          echo "ArgoCD will automatically sync to DEV! 🔄" >> $GITHUB_STEP_SUMMARY
+
+  # ============================================
+  # Deploy to QA Environment
+  # ============================================
+  deploy-qa:
+    name: Deploy to QA
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main' || github.event.inputs.environment == 'qa'
+    environment:
+      name: qa
+      url: https://qa.yourdomain.com
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.MUSICAPP_GITHUB_TOKEN }}
+
+      - name: Update QA deployment manifest
+        run: |
+          NEW_TAG="${{ needs.build-and-test.outputs.new_tag }}"
+          
+          # Update the image tag in qa overlay
+          if [ -f "k8s/overlays/qa/deployment.yaml" ]; then
+            sed -i "s|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:.*|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${NEW_TAG}|g" k8s/overlays/qa/deployment.yaml
+          else
+            # Update base deployment if overlay doesn't exist
+            sed -i "s|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:.*|image: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${NEW_TAG}|g" k8s/deployment.yaml
+          fi
+          
+          echo "✅ Updated QA deployment with image tag: ${NEW_TAG}"
+
+      - name: Commit and push QA changes
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git add k8s/
+          
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "🚀 [QA] Update deployment to ${{ needs.build-and-test.outputs.new_tag }}"
+            git push origin HEAD:${{ github.ref_name }}
+            echo "✅ QA manifest updated successfully!"
+          fi
+
+      - name: QA Deployment Summary
+        run: |
+          echo "## 🟡 QA Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Environment:** QA" >> $GITHUB_STEP_SUMMARY
+          echo "- **Docker Image:** \`${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-test.outputs.new_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Commit SHA:** \`${{ needs.build-and-test.outputs.short_sha }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Git Tag:** \`${{ needs.build-and-test.outputs.new_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "ArgoCD will automatically sync to QA! 🔄" >> $GITHUB_STEP_SUMMARY
+
+  # ============================================
+  # Notification Stage (Optional)
+  # ============================================
+  notify:
+    name: Send Deployment Notifications
+    runs-on: ubuntu-latest
+    needs: [build-and-test, deploy-dev, deploy-qa]
+    if: always()
+    
+    steps:
+      - name: Deployment Status
+        run: |
+          echo "## 📢 Deployment Pipeline Complete" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Build Status:** ${{ needs.build-and-test.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **DEV Deploy:** ${{ needs.deploy-dev.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **QA Deploy:** ${{ needs.deploy-qa.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**DockerHub:** https://hub.docker.com/r/${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}" >> $GITHUB_STEP_SUMMARY
