--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -109,6 +109,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull origin ${GITHUB_REF#refs/heads/}
           git add k8s/
           if git diff --staged --quiet; then
             echo "No changes to commit"
@@ -146,6 +147,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull origin ${GITHUB_REF#refs/heads/}
           git add k8s/
           if git diff --staged --quiet; then
             echo "No changes to commit"
