--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -88,7 +88,12 @@ jobs:
     name: Deploy to DEV
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref != 'refs/heads/main' || github.event.inputs.environment == 'dev'
+    if: |
+      startsWith(github.ref, 'refs/heads/') && (
+        github.ref != 'refs/heads/main' ||
+        github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev' ||
+        github.ref == 'refs/heads/main'
+      )
     environment:
       name: dev
       url: https://dev.yourdomain.com
@@ -125,7 +130,9 @@ jobs:
     name: Deploy to QA
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
-    if: github.ref == 'refs/heads/main'
+    if: |
+      github.ref == 'refs/heads/main' ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'qa')
     environment:
       name: qa
       url: https://qa.yourdomain.com
