--- a/argocd-application/dev-application.yaml
+++ b/argocd-application/dev-application.yaml
@@ -6,11 +6,11 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: music-app
+  project: music-dashboard-project
 
   source:
     repoURL: https://github.com/madKrypton/argo-cd-demo.git
-    targetRevision: dev
+    targetRevision: HEAD
     path: k8s/overlays/dev
 
   destination:
