refactor: migrate resources to base directory and update kustomization

--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -11,9 +11,7 @@ labels:
       managed-by: argocd
 
 resources:
-  - ../../deployment.yaml
-  - ../../service.yaml
-  - ../../configmap.yaml
+  - ../../base
 
 replicas:
   - name: music-dashboard
